removing scrollbar fix because it messes up mobile

--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -5,7 +5,3 @@
   -webkit-filter: $f;
   filter: $f;
 }
-
-@mixin centerWhenScrollBar() {
-  padding-left: calc(100vw - 100%);    // Determines the width of the scrollbar
-}
